--- a/directives/message-content.html
+++ b/directives/message-content.html
@@ -1,43 +1,44 @@
 <div class="ui centered divided padded grid">
     <div class="row">
         <div class="twelve wide computer sixteen wide mobile column">
-            <div class="ui comments">
-                <div class="comment" ng-repeat="value in messageCtrl.messages">
-                    <a class="avatar">
-                    </a>
-                    <div class="content">
-                        <a class="author">Matt</a>
-                        <div class="metadata">
-                            <span class="date">{{ value.date | date:'h:mm a' }}</span>
+            <div id="messages-list" class="pf-scrollbar">
+                <div class="ui comments">
+                    <div class="comment" ng-repeat="value in messageCtrl.messages">
+                        <div class="content" ng-hide="value.notify">
+                            <a class="author">{{ value.user.nickname }}</a>
+                            <div class="metadata">
+                                <span class="date">{{ value.date | date:'h:mm a' }}</span>
+                            </div>
+                            <div class="text">
+                                {{ value.text }}
+                            </div>
                         </div>
-                        <div class="text">
-                            {{ value.text }}
+                        <div class="content" ng-show="value.notify">
+                            <span class="author">{{ value.text }}</span>
+                            <div class="metadata">
+                                <span class="date">{{ value.date | date:'h:mm a' }}</span>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="four wide computer column">
-            <div class="ui divided list">
-                <div class="item">
-                    <img class="ui avatar image" src="/images/avatar/small/helen.jpg">
-                    <div class="content">
-                        <div class="header">Snickerdoodle</div>
-                        An excellent companion
+            <div id="user-list" class="pf-scrollbar">
+                <div class="ui list">
+                    <div class="item" ng-show="messageCtrl.profile">
+                        <i class="large {{ messageCtrl.profile.icon }} middle aligned icon"></i>
+                        <div class="content">
+                            <div class="header">{{ messageCtrl.profile.nickname }}</div>
+                            {{ messageCtrl.profile.gender | gender }}
+                        </div>
                     </div>
-                </div>
-                <div class="item">
-                    <img class="ui avatar image" src="/images/avatar/small/daniel.jpg">
-                    <div class="content">
-                        <div class="header">Poodle</div>
-                        A poodle, its pretty basic
-                    </div>
-                </div>
-                <div class="item">
-                    <img class="ui avatar image" src="/images/avatar/small/daniel.jpg">
-                    <div class="content">
-                        <div class="header">Paulo</div>
-                        He's also a dog
+                    <div class="item" ng-repeat="value in messageCtrl.users | orderBy:'gender'">
+                        <i class="large {{ value.icon }} middle aligned icon"></i>
+                        <div class="content">
+                            <div class="header">{{ value.nickname }}</div>
+                            {{ value.gender | gender }}
+                        </div>
                     </div>
                 </div>
             </div>
