--- a/directives/side-menu-mobile.html
+++ b/directives/side-menu-mobile.html
@@ -1,19 +1,15 @@
-<a class="item">
-	<i class="sidebar icon"></i>
+<a class="item" id="sidebar-btn">
+    <i class="sidebar icon"></i>
 </a>
 <a class="item">
-	<i class="home icon"></i>
-	Home
+    <i class="home icon"></i> Home
 </a>
 <a class="item">
-	<i class="block layout icon"></i>
-	Topics
+    <i class="block layout icon"></i> Topics
 </a>
 <a class="item">
-	<i class="smile icon"></i>
-	Friends
+    <i class="smile icon"></i> Friends
 </a>
 <a class="item">
-	<i class="calendar icon"></i>
-	History
+    <i class="calendar icon"></i> History
 </a>
