--- a/directives/side-menu.html
+++ b/directives/side-menu.html
@@ -1,16 +1,12 @@
 <a class="item">
-	<i class="home icon"></i>
-	Home
+    <i class="home icon"></i> Home
 </a>
 <a class="item">
-	<i class="block layout icon"></i>
-	Topics
+    <i class="block layout icon"></i> Topics
 </a>
 <a class="item">
-	<i class="smile icon"></i>
-	Friends
+    <i class="smile icon"></i> Friends
 </a>
 <a class="item">
-	<i class="calendar icon"></i>
-	History
+    <i class="calendar icon"></i> History
 </a>
