--- a/index.html
+++ b/index.html
@@ -6,20 +6,24 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Document</title>
 		<link rel="stylesheet" type="text/css" href="static/semantic/dist/semantic.min.css">
+		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jquery.perfect-scrollbar/0.6.5/css/perfect-scrollbar.min.css">
+		<link rel="stylesheet" type="text/css" href="static/css/style.css">
 	</head>
-	<body>
+	<body ng-controller="MainController as main">
 		<side-menu class="ui left sidebar vertical menu" id="sidebar-menu"></side-menu>
 		<div class="pusher">
-			<side-menu-mobile class="ui menu" id="sidebar-btn"></side-menu-mobile>
+			<side-menu-mobile class="ui menu"></side-menu-mobile>
 			<modal-input></modal-input>
 			<message-content></message-content>
 			<message-input></message-input>
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-cookies.js"></script>
 		<script src="/socket.io/socket.io.js"></script>
 		<script src="static/js/ng-socket-io.min.js"></script>
 		<script src="static/js/app.js"></script>
 		<script src="static/semantic/dist/semantic.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.perfect-scrollbar/0.6.5/js/min/perfect-scrollbar.jquery.min.js"></script>
 	</body>
 </html>
